--- a/salad-vue/index.html
+++ b/salad-vue/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div style="display: flex; justify-content: center;">
+    <div style=" width: 100%; max-width: 480px; position: relative; box-shadow: 0px 0px 0px 2px #eee;">
+      <div id="app"></div>
+    </div>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
 
