--- a/salad-vue/index.html
+++ b/salad-vue/index.html
@@ -6,10 +6,23 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CUSTOM SALAD</title>
+  <style>
+    .content {
+      display: none;
+      position: absolute;
+    }
+
+    @media (min-width: 700px) {
+      .content {
+        display: block;
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <div style="display: flex; justify-content: center;">
+  <div class="content">내몸에 맞는 샐러드</div>
+  <div style="display: flex; justify-content: center; align-items: center;">
     <div style=" width: 100%; max-width: 480px; position: relative; box-shadow: 0px 0px 0px 2px #eee;">
       <div id="app"></div>
     </div>
